--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-  "dev": "vite --host",
-  "start": "NODE_ENV=production node dist/index.js",
-  "preview": "vite preview --host",
-  "check": "tsc --noEmit",
-  "format": "prettier --write ."
+    "dev": "vite --host",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "NODE_ENV=production node dist/index.js",
+    "preview": "vite preview --host",
+    "check": "tsc --noEmit",
+    "format": "prettier --write ."
+  }
 }
+
 ,
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
